# code-with-claude

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  startup.md
capstone/: README.md
capstone/v1-prompt/: README.md  analyst.py  sample_input.txt
capstone/v2-mcp/: README.md  server.py
capstone/v3-agent/: README.md  analyst.py
day-01-prompting/: README.md  before_after.py  hello_claude.py  tests.md
day-02-context-mcp/: README.md  stuff_everything.py  with_mcp.py
day-02-context-mcp/post-2-artifacts/: README.md  stuff_everything_rd_3runs.txt  with_mcp_rd_3runs.txt  with_mcp_rd_trace.txt  with_mcp_textile_trace.txt
day-03-agents/: README.md  demo_error_handling.py  demo_memory.py  demo_parallel.py
day-03-agents/post-3-artifacts/: post_error_excerpt.txt  post_memory_excerpt.txt  post_parallel_excerpt.txt  turn1_textile.txt  turn2_indirect_tax.txt  turn3_comparison.txt  turn4_summary.txt
day-04-patterns/: README.md
day-05-analysis/: README.md
day-06-evals/: README.md
day-07-orchestration/: README.md
day-08-cookbook/: README.md
fixtures/budget-2026/: RATIONALE.md  README.md  budget_speech.docx  budget_speech.txt  split_sections.py
fixtures/budget-2026/sections/: agriculture.farmer_welfare_and_high_value_crops.txt  annexure.direct_tax_amendments.txt  index.json  (+18 more)
fixtures/emails/: README.md
fixtures/pdfs/: README.md
fixtures/transcripts/: README.md
shared/: __init__.py  agent.py  client.py  config.py  mcp_adapter.py  tracing.py
shared/prompts/: __init__.py  analyst.py  base.py
shared/tools/: __init__.py  analyst.py
